# Marius-s-mod1-atsiskaitymas

./: README.md  main.py  pyproject.toml  requirements.txt
marius_s_mod1_atsiskaitymas/: articles.csv  crawler.py  main.py
tests/: test_crawler.py
