[tool.poetry]
name = "marius-s-mod1-atsiskaitymas"
version = "0.2.0"
description = ""
authors = ["Marelis272 <Mariusstosk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
lxml = "^5.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
